@@ -3,6 +3,7 @@ plugins {
     id 'org.springframework.boot' version '3.4.0'
     id 'io.spring.dependency-management' version '1.1.6'
 }
+apply from: 'version.gradle'
 
 group = 'com.greem4'
 version = '0.0.1-SNAPSHOT'
@@ -21,6 +22,10 @@ configurations {
 
 repositories {
     mavenCentral()
+}
+
+configurations.configureEach {
+    exclude group: 'org.mockito', module: 'mockito-core'
 }
 
 dependencies {
@@ -42,13 +47,22 @@ dependencies {
     runtimeOnly 'org.postgresql:postgresql'
     annotationProcessor 'org.projectlombok:lombok'
 
-    testImplementation 'org.springframework.boot:spring-boot-starter-test'
     testImplementation 'org.springframework.security:spring-security-test'
+    testImplementation 'org.springframework.boot:spring-boot-starter-test'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:junit-jupiter'
+    testImplementation 'org.testcontainers:postgresql'
+    testImplementation "org.mockito:mockito-inline:${versions.mockito}"
+
     testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
 
 test {
     useJUnitPlatform()
+    jvmArgs += [
+            "-XX:+EnableDynamicAgentLoading",
+            "-Djdk.instrument.traceUsage=false"
+    ]
 }
 
 wrapper {
